12_playground/alchemy/oxygen/deploy/minikube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oxygen
  labels:
    app: oxygen
  annotations:
    maintainer: "felix@roskenet.de"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oxygen
  template:
    metadata:
      labels:
        app: oxygen
    spec:
      containers:
        - name: oxygen
          image: oxygen:latest
          imagePullPolicy: IfNotPresent 
          ports:
            - containerPort: 8080
              name: http 
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1
              memory: 1Gi
