12_playground/alchemy/oxygen/deploy/minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oxygen
  labels:
    app: oxygen
  annotations:
    maintainer: "felix@roskenet.de"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: oxygen.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oxygen
                port:
                  name: http
